--- a/README
+++ b/README
@@ -27,11 +27,21 @@ DESCRIPTION
     prepare_request (extended)
         Replace the parameters hash in Catalyst::Request with a tied hash.
 
+CAVEATS
+    Note that technically according to RFC2388, the ordering of fields
+    submitted by a form does not have to follow the order of the form
+    elements displayed on the page. However, I believe most, if not all,
+    common browsers do follow this convention. This plugin has been tested
+    with both IE6 and Firefox 1.0.6.
+
 SEE ALSO
     Catalyst
 
 AUTHOR
     Andy Grundman, "andy@hybridized.org"
+
+THANKS
+    Tom Shinnick, "shenme@perlmonks.org", for pointing out RFC2388.
 
 COPYRIGHT
     This program is free software, you can redistribute it and/or modify it
